src/main/java/com/example/credit_service_project/service/errors/exceptions/CardNotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class CardNotFoundException extends RuntimeException {
    public CardNotFoundException(String message) {
        super(message);
    }
}
